assets/css/home.scss
@import 'global';
@import 'components/header-anim';
@import 'base/mixins';

$color-greeting: $color-text;
$color-name: $color-accent;
$color-title: $color-text-secondary;

$font-size-greeting: 2rem;
$font-size-name: 4rem;
$font-size-title: 1.8rem;

main {
    padding: 0;
    align-items: center;
    justify-content: center;
}

.intro {
    align-items: center;

    .text {
        font-family: $font-secondary;
        font-weight: $font-weight-bold;
        display: flex;
        flex-direction: column;
        white-space: nowrap;

        .greeting {
            color: $color-greeting;
            font-size: $font-size-greeting;
        }

        .name {
            color: $color-name;
            font-size: $font-size-name;
            line-height: 1;
        }

        .title {
            color: $color-title;
            font-size: $font-size-title;
            line-height: 1;
        }
    }

    .pfp-container {
        img.pfp {
            width: 256px;
            height: 256px;
        }
    }
}

@include notMobile {
    .intro {
        display: grid;
        grid-template-columns: 1fr 1fr;
        grid-template-rows: 1fr;
        padding-top: 5rem;
        width: 100%;
        .text {
            justify-self: end;
            text-align: right;
            padding-right: 2rem;
        }

        .pfp-container {
            justify-content: flex-start;
            padding-left: 2rem;
        }
    }
}

@include mobile {
    .intro {
        display: flex;
        flex-direction: column;

        .text {
            text-align: center;
        }
    }
}

